--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "mongoose": "^5.9.7",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "pg": "^8.0.0",
