--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "font-awesome": "^4.7.0",
+    "http": "0.0.1-security",
     "jquery": "^3.4.1",
     "mongoose": "^5.9.7",
     "mysql": "^2.18.1",
+    "newrelic": "^6.5.0",
     "nodemon": "^2.0.2",
     "pg": "^8.0.0",
     "react": "^16.13.0",
