--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "server-dev": "nodemon server/index.js",
-    "react-dev": "webpack -w",
+    "react-dev": "webpack -d --watch",
     "test": "jest --verbose --coverage",
     "old-seed": "node ./server/db/seeds",
     "seed-mongo": "node ./server/db/mongoSeedScripts/seedMongo",
